# rocket-todo-app

./: .env  .envrc  Cargo.toml  Rocket.toml  docker-compose.yml  rocket-rest-test.paw
api-server/: .env  Cargo.toml  Dockerfile  Rocket.toml
api-server/migrations/2017-09-02-200649_create_todo/: down.sql
api-server/src/: db.rs  lib.rs  main.rs  models.rs  todos.rs
api-server/tests/: lib.rs
client/: Dockerfile  package.json
migrations/2017-09-02-200649_create_todo/: up.sql
src/: db.rs  lib.rs  main.rs  models.rs  schema.rs  todos.rs
