[package]
name = "todo-app-rocket"
version = "0.1.0"
authors = ["Eric Dattore <edattore@gmail.com>"]

[lib]
name = "todo_app"
path = "src/lib.rs"

[[bin]]
name = "todo_app"
path = "src/main.rs"

[dependencies]
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "0.16", features = ["mysql"] }
diesel_codegen = { version = "0.16", features = ["mysql"] }
r2d2-diesel = "0.16"
r2d2 = "0.7"
dotenv = "0.10"
