[package]
name = "todo-app-rocket"
version = "0.1.0"
authors = ["Eric Dattore <edattore@gmail.com>"]

[lib]
name = "todo_app"
path = "src/lib.rs"

[[bin]]
doc = false
name = "todo_app"
path = "src/main.rs"

[dependencies]
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.0.0-rc1", features = ["postgres"] }
r2d2-diesel = "1.0.0-rc1"
r2d2 = "0.8.1"
dotenv = "0.10.1"
