[package]
name = "todo-app-rocket"
version = "0.1.0"
authors = ["Eric Dattore <edattore@gmail.com>"]

[lib]
name = "libtodo"
path = "src/lib.rs"

[[bin]]
doc = false
name = "todo"
path = "src/main.rs"

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "^1.0", features = ["postgres", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.10"
