[package]
name = "todo-app-rocket"
version = "0.1.0"
authors = ["Eric Dattore <edattore@gmail.com>"]

[lib]
name = "todo_app"
path = "src/lib.rs"

[[bin]]
doc = false
name = "todo_app"
path = "src/main.rs"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4.6", features = ["postgres"] }
r2d2-diesel = "1.0.0"
r2d2 = "0.8"
dotenv = "0.10"

[patch.crates-io]
ring = { git = "https://github.com/SergioBenitez/ring", branch = "v0.11" }

